adds new details page

--- a/packages/react-app/src/components/Layout.css
+++ b/packages/react-app/src/components/Layout.css
@@ -2,9 +2,9 @@
   background: #fff;
 }
 
-.main-content {
+/* .main-content {
   padding: 24;
   margin: 0;
   min-height: 90vh;
   background: #edf2f7;
-}
+} */
