--- a/packages/react-app/src/App.css
+++ b/packages/react-app/src/App.css
@@ -3,3 +3,16 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+/* .ui .single .line .striped .table {
+  width: fit-content !important;
+}
+
+table {
+  width: fit-content !important;
+} */
+
+/* .sc-kEjbxe .eNtrNd {
+  display: flex;
+  justify-content: center;
+} */
