adds all missing loaders and icons

--- a/packages/react-app/src/App.css
+++ b/packages/react-app/src/App.css
@@ -24,3 +24,14 @@ table {
 .bLXgcF .frEOqt {
   background-color: #4143b6;
 }
+
+.anticon-spin {
+  display: none;
+}
+.ant-upload-list-item-name {
+  float: right;
+}
+
+.jqeKPM .sc-iJuUWI {
+  background-color: #4143b6;
+}
